@@ -1,3 +1,11 @@
+2015-05-15  James Anderson  <anderson@gfz-potsdam.de>
+
+	* src/vextables.h:
+	* src/corrparams.h:
+	* src/vextables.cpp:
+	* src/vex2difx.cpp:
+	* src/corrparams.cpp: bugfixes
+
 2015-05-04  James Anderson  <anderson@gfz-potsdam.de>
 
 	* src/vexload.cpp:
